# Blacklight

./: .gitignore  README.md  blacklight.py  main.py
.github/workflows/: go.yml
blacklight/: __init__.py  blacklight.py  pyproject.toml
blacklight/venv_handler/: installer.py  loader.py  piputil.py
lists/: me.json  raven.json
src/: flags.go  go.mod  installapp.go  main.go  runapp.go
src/pkg/: Python.h  converter.go  core.go  helper.go  package_list_operations.go  python.go
venv_handler/: installer.py
